Added communication module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
 #include_directories (./mavlink)
 
 add_library (param param.c)
+add_library (comm comm.c)
 
 add_executable (pdva-pilot pdva-pilot.c)
-target_link_libraries (pdva-pilot param rt ${LIBCONFIG_LIBRARIES})
+target_link_libraries (pdva-pilot param comm rt ${LIBCONFIG_LIBRARIES})
 
 install (TARGETS pdva-pilot DESTINATION bin)
