Adding PID control library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,11 @@ set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
 add_library (comm comm.c)
 add_library (control control.c)
 add_library (param param.c)
+add_library (pid pid.c)
 
 add_executable (pdva-pilot pdva-pilot.c)
-target_link_libraries (pdva-pilot param comm control rt ${LIBCONFIG_LIBRARIES})
+target_link_libraries (
+  pdva-pilot comm control param pid rt 
+  ${LIBCONFIG_LIBRARIES})
 
 install (TARGETS pdva-pilot DESTINATION bin)
