Added telemetry and datalogging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,14 @@ set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
 # Add the project libraries
 add_library (comm comm.c)
 add_library (control control.c)
+add_library (datalog datalog.c)
 add_library (param param.c)
 add_library (pid pid.c)
 
 # Add the project executables
 add_executable (pdva-pilot pdva-pilot.c)
 target_link_libraries (
-  pdva-pilot comm control param pid rt
+  pdva-pilot comm control datalog param pid m rt
   ${libconfig_LIBRARIES} ${glib2_LIBRARIES})
 
 # Define the installation
