Created one thread specific for datalogging. Created a timer that activates the periodic datalogging task. Changed the datalog to use different folders for each experiment performed. Changed the datalog to use several files,     with configurable downsampling per file. Added parameters to pdva_config that set the datalogging period     and downsampling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package (libconfig REQUIRED)
 include_directories (${libconfig_INCLUDE_DIRS})
 
 # Set compiler options
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -pthread")
 
 # Add the project libraries
 add_library (comm comm.c)
